Your commit message

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,4 +1,34 @@
 {
+  "api": {
+    "api17fef00a": {
+      "dependsOn": [
+        {
+          "attributes": [
+            "Name",
+            "Arn"
+          ],
+          "category": "function",
+          "resourceName": "coffeenowb3f21ce5"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "API Gateway"
+    },
+    "order": {
+      "dependsOn": [
+        {
+          "attributes": [
+            "Name",
+            "Arn"
+          ],
+          "category": "function",
+          "resourceName": "CreateNewOrder"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "API Gateway"
+    }
+  },
   "auth": {
     "coffeenow752e3ad5": {
       "customAuth": false,
@@ -28,7 +58,17 @@
     }
   },
   "function": {
+    "CreateNewOrder": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
     "coffeenow2cd1dcad": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
+    "coffeenowb3f21ce5": {
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
@@ -41,6 +81,22 @@
     }
   },
   "parameters": {
+    "AMPLIFY_function_CreateNewOrder_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "CreateNewOrder"
+        }
+      ]
+    },
+    "AMPLIFY_function_CreateNewOrder_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "CreateNewOrder"
+        }
+      ]
+    },
     "AMPLIFY_function_coffeenow2cd1dcad_deploymentBucketName": {
       "usedBy": [
         {
@@ -54,6 +110,22 @@
         {
           "category": "function",
           "resourceName": "coffeenow2cd1dcad"
+        }
+      ]
+    },
+    "AMPLIFY_function_coffeenowb3f21ce5_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "coffeenowb3f21ce5"
+        }
+      ]
+    },
+    "AMPLIFY_function_coffeenowb3f21ce5_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "coffeenowb3f21ce5"
         }
       ]
     }
